fix: prevent scrollbar without side-effects of previous fix
Setting height: 100% can still get bigger than 100% by it's content,
using max-height fixes this.

--- a/solara/server/assets/style.css
+++ b/solara/server/assets/style.css
@@ -112,7 +112,6 @@ div.highlight {
 
 .solara-autorouter-content {
     height: 100%;
-    overflow: auto;
 }
 
 /* originally from index.css */
